# vae

./: .gitignore  README.md  brats.py  brats_without_skip_connections.py  hydra_main.py  main.py  pyproject.toml
.ipynb_checkpoints/: brats-checkpoint.py
config/: config.yaml
config/backbone/: conv.yaml  mlp.yaml
config/dataset/: fashion_mnist.yaml  mnist.yaml
config/logger/: wandb.yaml
config/model/: standard_vae.yaml
config/trainer/: default.yaml
datasets/: __init__.py  abstract_datamodule.py  brats.py  brats_2021.py  fashionmnist.py  mnist.py
src/: config_utils.py  visualization.py
src/vae_backbones/: __init__.py  abstract_backbone.py  conv.py  conv_without_skip_connections.py  mlp.py
src/vae_models/: __init__.py  abstract.py  abstract_vae.py  abstract_without_skip_connections.py  standard.py
