[project]
name = "vae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrayshow",
    "h5py>=3.13.0",
    "hydra-core>=1.3.2",
    "lightning>=2.5.0.post0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "omegaconf>=2.3.0",
    "pyqt5>=5.15.11",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "wandb>=0.19.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
]

[tool.uv.sources]
arrayshow = { git = "https://github.com/oscarvanderheide/arrayshow.git" }
